--- a/P-vals.html
+++ b/P-vals.html
@@ -27,8 +27,8 @@
     .reveal .slides>section>section {
       padding: 0px 0px;
     }
-
-
+	
+	.reveal p {	font-size: 0.8em}
 
     .reveal table {
       border-width: 1px;
@@ -36,7 +36,7 @@
       border-style: dotted;
       border-color: gray;
       border-collapse: collapse;
-      font-size: 0.7em;
+      font-size: 0.5em;
     }
 
     .reveal table th {
